discussion/kv_engine/173324/173324_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Remove DCPBackfill::transitionState calls from sub-classes

Bring all state changes under control of DCPBackfill. Using the return
status of create and scan, DCPBackfill can determine the next state.

Change-Id: I5b613cbde75749a19406c389b3e5c15e2a4070a7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-05-08 21:02:33.000000000
Message: 
Uploaded patch set 7: Patch Set 6 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-08 21:10:44.000000000
Message: 
Patch Set 7: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38618/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38618/ )

CMake error: CMakeLists.txt:139 (MESSAGE) ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38618/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17350/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3: error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
  static_assert(
  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1853:23: note: in instantiation of function template specialization "fmt::v8::detail::make_arg<true, fmt::v8::basic_format_context<fmt::v8::appender, char>, fmt::v8::detail::type::custom_type, Vbid &, 0>" requested here
        data_{detail::make_arg<
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1872:10: note: in instantiation of function template specialization "fmt::v8::format_arg_store<fmt::v8::basic_format_context<fmt::v8::appender, char>, char [45], Vbid>::format_arg_store<char const (&)[45], Vbid &>" requested here
  return {std::forward<Args>(args)...};
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:3119:28: note: in instantiation of function template specialization "fmt::v8::make_format_args<fmt::v8::basic_format_context<fmt::v8::appender, char>, char const (&)[45], Vbid &>" requested here
  return vformat(fmt, fmt::make_format_args(args...));
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:52:37: note: in instantiation of function template specialization "fmt::v8::format<char const (&)[45], Vbid>" requested here
        throw std::logic_error(fmt::format("{}: {} called in State::Done",
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:24:20: error: no member named "makeGuard" in namespace "folly" [clang-diagnostic-error]
            folly::makeGuard([start = std::chrono::steady_clock::now(), this] {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/backfill.cc:66:9: error: use of undeclared identifier "EP_LOG_WARN" [clang-diagnostic-error]
        EP_LOG_WARN(
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17350/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/fmt.exploded/include/fmt/core.h:1727:3:
error: static_assert failed due to requirement "formattable" "Cannot format an argument. To make type T formattable provide a formatter<T> specialization: https://fmt.dev/latest/api.html#udt" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17350/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45985/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\dcp/backfill_disk.h(17): fatal error C1083: Cannot open include file: "shared_ptr": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45985/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6961/ : FAILURE

Compile error at [2022-05-08T21:03:48.091Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6961/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20136/ : FAILURE

Compile error at [2022-05-08T21:05:42.661Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19108/ : FAILURE

Compile error at [2022-05-08T21:10:18.825Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: shared_ptr: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19108/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19451/ : FAILURE

Compile error at [2022-05-08T21:05:28.282Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: shared_ptr: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19451/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18299/ : FAILURE

Compile error at [2022-05-08T21:05:14.060Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18299/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7053/ : FAILURE

Compile error at [2022-05-08T21:07:01.303Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: shared_ptr: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7053/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27508/ : FAILURE

Compile error at [2022-05-08T21:07:21.431Z] ../kv_engine/engines/ep/src/dcp/backfill_disk.h:17:10:
fatal error: "shared_ptr" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27508/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16354/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
